Gustavs test commit :)

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="../scripts/main.js"></script>
-    <link rel="shortcut icon" type="image/png" sizes="96x96" href="https://data.riksdagen.se/ui/img/favicons/favicon-96x96.png"/>
+    <link rel="shortcut icon" type="image/png" sizes="96x96" href="https://data.riksdagen.se/ui/img/favicons/favicon-96x96.png" />
 </head>
 
 <h1>API - Riksdagen</h1>
@@ -24,6 +24,7 @@
     <input type="checkbox" value="KD">Kristdemokraterna</option>
     <input type="checkbox" value="L">Liberalerna</option>
     <input type="checkbox" value="MP">Miljöpartiet</option>
+    <input type="checkbox" value="MP">Mjölbypartiet</option>
 </div>
 <h2></h2>
 <ul id="list-people">
