viktors test commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
     <input type="checkbox" value="L">Liberalerna</option>
     <input type="checkbox" value="MP">Miljöpartiet</option>
     <input type="checkbox" value="MP">Mjölbypartiet</option>
+    <input type="checkbox" value="MP">Viktors parti</option>
 </div>
 <h2></h2>
 <ul id="list-people">
